tests/unit/default/syntax-error/021-create-table-parens-name-colon-type.e.t
---- IN ----
+%table(id:int
---- OUT ----
---- ERR ----
syntax: expected `)` after `...ble(id:int` instead of EOL at position 14 - at line 1
---- EXIT ----
1
